Update environment variables, add signup component, and enhance exam functionality
- Updated .env file with new API credentials.
- Introduced a new Signup component with form validation and position preferences fetching.
- Enhanced exam functionality by adding checks for exam completion and improved timer handling.
- Updated API calls to include new endpoints for exam and signup processes.
- Refactored existing components for better readability and maintainability.

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
-VITE_USERNAME="3cacf416e2c81d4"
-VITE_PASSWORD="7ecf4096149558e"
-VITE_API_BASE_URL="https://dev.samarth.group/api/method"
+# VITE_USERNAME="3cacf416e2c81d4"
+# VITE_PASSWORD="7ecf4096149558e"
+# VITE_API_BASE_URL="https://dev.samarth.group/api/method"
+
+
+VITE_USERNAME="520626f4a316f3a"
+VITE_PASSWORD="dd7690a7a92f6c9"
+VITE_API_BASE_URL="https://sd.samarth.group/api/method"
+
+
