--- a/server/package.json
+++ b/server/package.json
@@ -1,50 +1,32 @@
 {
-  "name": "mcq-exam-backend",
+  "name": "mcq-exam-server",
   "version": "1.0.0",
-  "description": "Subscription-based MCQ Exam System Backend with MariaDB",
+  "description": "Backend server for MCQ Exam System",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
-    "migrate": "npx sequelize-cli db:migrate",
-    "migrate:undo": "npx sequelize-cli db:migrate:undo",
-    "seed": "npx sequelize-cli db:seed:all",
-    "seed:undo": "npx sequelize-cli db:seed:undo:all",
-    "db:create": "npx sequelize-cli db:create",
-    "db:drop": "npx sequelize-cli db:drop"
+    "migrate": "node scripts/migrate.js",
+    "seed": "node scripts/seedData.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.10.0",
-    "express-validator": "^7.0.1",
+    "cors": "^2.8.5",
     "helmet": "^7.0.0",
+    "express-rate-limit": "^6.7.0",
+    "dotenv": "^16.3.1",
+    "sequelize": "^6.32.1",
+    "mysql2": "^3.6.0",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "mariadb": "^3.2.2",
-    "moment": "^2.29.4",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.14.1",
     "nodemailer": "^6.9.4",
-    "sequelize": "^6.35.2",
-    "stripe": "^13.5.0",
-    "uuid": "^9.0.0"
+    "express-validator": "^7.0.1",
+    "stripe": "^12.18.0"
   },
   "devDependencies": {
-    "jest": "^29.6.2",
-    "nodemon": "^3.0.1",
-    "sequelize-cli": "^6.6.2"
+    "nodemon": "^3.0.1"
   },
-  "keywords": [
-    "mcq",
-    "exam",
-    "subscription",
-    "education",
-    "mariadb",
-    "sequelize"
-  ],
-  "author": "Yash Joshi",
+  "keywords": ["mcq", "exam", "system", "nodejs", "express"],
+  "author": "",
   "license": "MIT"
 }
